[gd_scene load_steps=52 format=3 uid="uid://c38mv1ehy76yq"]

[ext_resource type="Script" uid="uid://7bpxuiyel11i" path="res://control.gd" id="1_rgmk4"]
[ext_resource type="PackedScene" uid="uid://qm1dcj13gvqi" path="res://oppo_knocks_card2.tscn" id="2_074og"]
[ext_resource type="PackedScene" uid="uid://51fmbsrr8npj" path="res://potluck1.tscn" id="2_f6a44"]
[ext_resource type="PackedScene" uid="uid://di37b7w15wrtk" path="res://banker.tscn" id="2_fcj45"]
[ext_resource type="PackedScene" uid="uid://ckif11oxvqu4e" path="res://oppo_knocks_card1.tscn" id="2_jq2sk"]
[ext_resource type="PackedScene" uid="uid://c0svqobjm8p3y" path="res://potluck2.tscn" id="3_0cbny"]
[ext_resource type="PackedScene" uid="uid://cokfv0alq008k" path="res://oppo_knocks_card3.tscn" id="3_cegan"]
[ext_resource type="PackedScene" uid="uid://uvbf7jklkn0l" path="res://dice.tscn" id="4_hfuxw"]
[ext_resource type="PackedScene" uid="uid://qogxccgcgn7a" path="res://potluck3.tscn" id="4_hrvbo"]
[ext_resource type="Texture2D" uid="uid://dmncfc5q2ioio" path="res://board2.png" id="5_1k8yt"]
[ext_resource type="PackedScene" uid="uid://hflog4ipg8xy" path="res://oppo_knocks_card4.tscn" id="5_4k2k6"]
[ext_resource type="PackedScene" uid="uid://crcibwpy3hrd6" path="res://potluck4.tscn" id="5_uypp3"]
[ext_resource type="PackedScene" uid="uid://ixfqakbbldlx" path="res://oppo_knocks_card5.tscn" id="6_0rl1p"]
[ext_resource type="PackedScene" uid="uid://buthtdfm1ssj5" path="res://potluck5.tscn" id="6_blkrb"]
[ext_resource type="PackedScene" uid="uid://ddocrrqc4kuya" path="res://potluck6.tscn" id="7_abqjc"]
[ext_resource type="PackedScene" uid="uid://34p7uxxjmmru" path="res://oppo_knocks_card6.tscn" id="7_ok6jj"]
[ext_resource type="PackedScene" uid="uid://bvk4cwyqwh173" path="res://potluck7.tscn" id="8_6iyjs"]
[ext_resource type="PackedScene" uid="uid://dcfa8y7378w3r" path="res://oppo_knocks_card7.tscn" id="8_facbu"]
[ext_resource type="PackedScene" uid="uid://bvgmdmb7n7iuv" path="res://potluck8.tscn" id="9_4w656"]
[ext_resource type="PackedScene" uid="uid://b2ae0kl1ftfgs" path="res://oppo_knocks_card8.tscn" id="9_b1qrp"]
[ext_resource type="Texture2D" uid="uid://degtvhfsot4on" path="res://boardfinalish.png" id="9_getpj"]
[ext_resource type="PackedScene" uid="uid://e1rrc5vgfn6y" path="res://oppo_knocks_card9.tscn" id="10_come4"]
[ext_resource type="PackedScene" uid="uid://c4rsqnupt8346" path="res://potluck9.tscn" id="10_e71vb"]
[ext_resource type="Script" uid="uid://gh0l4pba4uyq" path="res://go.gd" id="10_whyee"]
[ext_resource type="PackedScene" uid="uid://c3i7eeligx4md" path="res://oppo_knocks_card10.tscn" id="11_h8e4i"]
[ext_resource type="Script" uid="uid://bnee34nb5y474" path="res://pot_luck.gd" id="11_iwhwm"]
[ext_resource type="Script" uid="uid://djsm8u827xanr" path="res://property_tile.gd" id="11_kassn"]
[ext_resource type="PackedScene" uid="uid://cmb04tu0w5h48" path="res://potluck10.tscn" id="11_rnkwl"]
[ext_resource type="PackedScene" uid="uid://btrkhgl5ibxql" path="res://oppo_knocks_card11.tscn" id="12_4lmeg"]
[ext_resource type="Script" uid="uid://bne2bi01q06dq" path="res://tax.gd" id="12_8y2uq"]
[ext_resource type="PackedScene" uid="uid://bl7kfgdb1piaa" path="res://potluck11.tscn" id="12_vke2r"]
[ext_resource type="PackedScene" uid="uid://bv44turxb5mwg" path="res://oppo_knocks_card12.tscn" id="13_0cp0l"]
[ext_resource type="Script" uid="uid://63xrkgrjroih" path="res://opportunity_knocks.gd" id="13_eictk"]
[ext_resource type="PackedScene" uid="uid://db3vavasd2ent" path="res://potluck12.tscn" id="13_uit24"]
[ext_resource type="PackedScene" uid="uid://dboheqmqnmups" path="res://oppo_knocks_card13.tscn" id="14_d2t1y"]
[ext_resource type="PackedScene" uid="uid://booxye3h0wpkn" path="res://potluck13.tscn" id="14_ruth0"]
[ext_resource type="Script" uid="uid://dxu4fqq2h8as0" path="res://just_visiting_jail.gd" id="14_x4aet"]
[ext_resource type="PackedScene" uid="uid://m1hwjc4cc86w" path="res://oppo_knocks_card14.tscn" id="15_gngh3"]
[ext_resource type="Script" uid="uid://s51amltac011" path="res://free_parking.gd" id="15_ljwko"]
[ext_resource type="PackedScene" uid="uid://dl6r47lta3fvr" path="res://potluck14.tscn" id="15_rm4vd"]
[ext_resource type="PackedScene" uid="uid://cguvnol3k04en" path="res://oppo_knocks_card15.tscn" id="16_0n3wm"]
[ext_resource type="Script" uid="uid://diu02lh54boqf" path="res://go_to_jail.gd" id="16_857qe"]
[ext_resource type="PackedScene" uid="uid://be74g7gnr260b" path="res://potluck15.tscn" id="16_pjyto"]
[ext_resource type="PackedScene" uid="uid://cs5ibtbsh58e5" path="res://oppo_knocks_card16.tscn" id="17_qnost"]
[ext_resource type="PackedScene" uid="uid://bpgfen60ln3jk" path="res://potluck16.tscn" id="17_sm6fg"]
[ext_resource type="Texture2D" uid="uid://d0ibdsuc4gah2" path="res://IMG_9656.webp" id="19_getpj"]
[ext_resource type="Texture2D" uid="uid://csxtqrxt2sss3" path="res://1c9a344d-4886-4b7c-9dac-ec24283c8518.jpg" id="20_ryguw"]
[ext_resource type="Theme" uid="uid://5mbaoxawpglr" path="res://Settings menu/panel.tres" id="21_jq2sk"]

[sub_resource type="Theme" id="Theme_4k2k6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0rl1p"]
bg_color = Color(0.556807, 0.578779, 0.808445, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_htxhm"]
load_path = "res://.godot/imported/IMG_0606 (002).jpeg-1674300e4cef8bd28192a4f3a5d3bf83.ctex"

[node name="GameManager" type="Control" node_paths=PackedStringArray("game_spaces")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rgmk4")
game_spaces = [NodePath("Board_Tiles/Go"), NodePath("Board_Tiles/The Old Creek"), NodePath("Board_Tiles/Pot luck"), NodePath("Board_Tiles/Gangster\'s Paradise"), NodePath("Board_Tiles/Income tax"), NodePath("Board_Tiles/Brighton station"), NodePath("Board_Tiles/The Angel\'s Delight"), NodePath("Board_Tiles/Opportunity knocks"), NodePath("Board_Tiles/Potter Avenue"), NodePath("Board_Tiles/Granger Drive"), NodePath("Board_Tiles/Just visiting jail"), NodePath("Board_Tiles/Sky walker drive"), NodePath("Board_Tiles/Telsa Power Co"), NodePath("Board_Tiles/Wookie hole"), NodePath("Board_Tiles/Rey lane"), NodePath("Board_Tiles/Hove station"), NodePath("Board_Tiles/Bishop drive"), NodePath("Board_Tiles/Potluck 2"), NodePath("Board_Tiles/Duhnam street"), NodePath("Board_Tiles/Broyles lane"), NodePath("Board_Tiles/Free parking"), NodePath("Board_Tiles/Yue fei square"), NodePath("Board_Tiles/Opportunity knocks2"), NodePath("Board_Tiles/Mulan rouge"), NodePath("Board_Tiles/Han xin garderns"), NodePath("Board_Tiles/Falmer station"), NodePath("Board_Tiles/Shatner close"), NodePath("Board_Tiles/Picard avenue"), NodePath("Board_Tiles/Edison water"), NodePath("Board_Tiles/Crusher creek"), NodePath("Board_Tiles/Go to jail"), NodePath("Board_Tiles/Sirat Mews"), NodePath("Board_Tiles/Ghengis Crescent"), NodePath("Board_Tiles/Pot luck 3"), NodePath("Board_Tiles/Ibis Close"), NodePath("Board_Tiles/Portslade station"), NodePath("Board_Tiles/Opportunity knocks3"), NodePath("Board_Tiles/James Webb Way"), NodePath("Board_Tiles/Super tax"), NodePath("Board_Tiles/Turing heights")]
potluck_card_deck = Array[PackedScene]([ExtResource("2_f6a44"), ExtResource("3_0cbny"), ExtResource("4_hrvbo"), ExtResource("5_uypp3"), ExtResource("6_blkrb"), ExtResource("7_abqjc"), ExtResource("8_6iyjs"), ExtResource("9_4w656"), ExtResource("10_e71vb"), ExtResource("11_rnkwl"), ExtResource("12_vke2r"), ExtResource("13_uit24"), ExtResource("14_ruth0"), ExtResource("15_rm4vd"), ExtResource("16_pjyto"), ExtResource("17_sm6fg")])
oppo_card_deck = Array[PackedScene]([ExtResource("2_jq2sk"), ExtResource("2_074og"), ExtResource("3_cegan"), ExtResource("5_4k2k6"), ExtResource("6_0rl1p"), ExtResource("7_ok6jj"), ExtResource("8_facbu"), ExtResource("9_b1qrp"), ExtResource("10_come4"), ExtResource("11_h8e4i"), ExtResource("12_4lmeg"), ExtResource("13_0cp0l"), ExtResource("14_d2t1y"), ExtResource("15_gngh3"), ExtResource("16_0n3wm"), ExtResource("17_qnost")])

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CardSpawn" type="Node2D" parent="CanvasLayer"]
position = Vector2(752, 347)

[node name="Banker" parent="." instance=ExtResource("2_fcj45")]
position = Vector2(3, 6)

[node name="Board" type="TextureRect" parent="."]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 561.0
offset_top = -212.0
offset_right = 1387.0
offset_bottom = 463.0
scale = Vector2(1, 0.962481)
texture = ExtResource("5_1k8yt")
expand_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 328.0
offset_bottom = 652.0
theme = SubResource("Theme_4k2k6")
theme_override_styles/panel = SubResource("StyleBoxFlat_0rl1p")

[node name="Panel" type="Panel" parent="PanelContainer"]
visible = false
layout_mode = 2

[node name="DiceStuff" type="Node" parent="."]

[node name="Dice" parent="DiceStuff" instance=ExtResource("4_hfuxw")]
position = Vector2(708.5, 305.25)
scale = Vector2(1.75, 1.57143)

[node name="DiceButton" type="Button" parent="DiceStuff"]
offset_left = 650.0
offset_top = 336.0
offset_right = 846.0
offset_bottom = 399.0
theme = ExtResource("21_jq2sk")
text = "Press to roll"

[node name="Dice2" parent="DiceStuff" instance=ExtResource("4_hfuxw")]
position = Vector2(776.5, 305.25)
scale = Vector2(1.76786, 1.58929)

[node name="RevealDice" type="Button" parent="DiceStuff"]
offset_left = 84.0
offset_top = 419.0
offset_right = 229.0
offset_bottom = 461.0
theme = ExtResource("21_jq2sk")
text = "Dice"

[node name="Boardfinalish" type="Sprite2D" parent="."]
position = Vector2(742, 325)
scale = Vector2(0.432292, 0.339583)
texture = ExtResource("9_getpj")
metadata/_edit_lock_ = true

[node name="Board_Tiles" type="Node" parent="."]

[node name="Go" type="Marker2D" parent="Board_Tiles"]
position = Vector2(390, 620)
script = ExtResource("10_whyee")
type = 0
tilename = "Go"
metadata/_edit_lock_ = true

[node name="The Old Creek" type="Marker2D" parent="Board_Tiles" node_paths=PackedStringArray("propertyowner")]
position = Vector2(370, 538)
script = ExtResource("11_kassn")
propertycost = 60
propertyowner = NodePath("../../Banker")
rent = 2
colour = 2
type = 1
tilename = "The Old Creek"
buyable = true
metadata/_edit_lock_ = true

[node name="Pot luck" type="Marker2D" parent="Board_Tiles"]
position = Vector2(376, 485)
script = ExtResource("11_iwhwm")
type = 3
tilename = "Potluck1"
metadata/_edit_lock_ = true

[node name="Gangster\'s Paradise" type="Marker2D" parent="Board_Tiles" node_paths=PackedStringArray("propertyowner")]
position = Vector2(365, 431)
script = ExtResource("11_kassn")
propertycost = 60
propertyowner = NodePath("../../Banker")
rent = 4
colour = 2
type = 1
tilename = "The Old Creek"
buyable = true
metadata/_edit_lock_ = true

[node name="Income tax" type="Marker2D" parent="Board_Tiles"]
position = Vector2(357, 382)
script = ExtResource("12_8y2uq")
type = 4
tilename = "Income Tax"
metadata/_edit_lock_ = true

[node name="Brighton station" type="Marker2D" parent="Board_Tiles" node_paths=PackedStringArray("propertyowner")]
position = Vector2(355, 329)
script = ExtResource("11_kassn")
propertycost = 200
propertyowner = NodePath("../../Banker")
rent = 25
colour = 9
type = 1
tilename = "Brighton Station"
buyable = true
metadata/_edit_lock_ = true

[node name="The Angel\'s Delight" type="Marker2D" parent="Board_Tiles" node_paths=PackedStringArray("propertyowner")]
position = Vector2(359, 274)
script = ExtResource("11_kassn")
propertycost = 100
propertyowner = NodePath("../../Banker")
rent = 6
colour = 0
type = 1
tilename = "The Angels Delight"
buyable = true
metadata/_edit_lock_ = true

[node name="Opportunity knocks" type="Marker2D" parent="Board_Tiles"]
position = Vector2(363, 222)
script = ExtResource("13_eictk")
type = 2
tilename = "Opportunity\\ Knocks"
metadata/_edit_lock_ = true

[node name="Potter Avenue" type="Marker2D" parent="Board_Tiles" node_paths=PackedStringArray("propertyowner")]
position = Vector2(362, 168)
script = ExtResource("11_kassn")
propertycost = 100
propertyowner = NodePath("../../Banker")
rent = 6
colour = 0
type = 1
tilename = "Potter Avenue"
buyable = true
metadata/_edit_lock_ = true

[node name="Granger Drive" type="Marker2D" parent="Board_Tiles" node_paths=PackedStringArray("propertyowner")]
position = Vector2(369, 118)
script = ExtResource("11_kassn")
propertycost = 120
propertyowner = NodePath("../../Banker")
colour = 0
type = 1
tilename = "Granger Drive"
buyable = true
metadata/_edit_lock_ = true

[node name="Just visiting jail" type="Marker2D" parent="Board_Tiles"]
position = Vector2(355, 48)
script = ExtResource("14_x4aet")
type = 5
tilename = "Just Visting"
metadata/_edit_lock_ = true

[node name="Sky walker drive" type="Marker2D" parent="Board_Tiles" node_paths=PackedStringArray("propertyowner")]
position = Vector2(476, 23)
script = ExtResource("11_kassn")
propertycost = 140
propertyowner = NodePath("../../Banker")
rent = 10
colour = 6
type = 1
tilename = "Sky Walker Drive"
buyable = true
metadata/_edit_lock_ = true

[node name="Telsa Power Co" type="Marker2D" parent="Board_Tiles"]
position = Vector2(547, 18)
script = ExtResource("11_kassn")
propertycost = 150
rent = 4
colour = 5
type = 1
tilename = "Tesla Power Co"
buyable = true
metadata/_edit_lock_ = true

[node name="Wookie hole" type="Marker2D" parent="Board_Tiles"]
position = Vector2(610, 23)
script = ExtResource("11_kassn")
propertycost = 140
rent = 10
colour = 6
type = 1
tilename = "Wookie Hole"
buyable = true
metadata/_edit_lock_ = true

[node name="Rey lane" type="Marker2D" parent="Board_Tiles"]
position = Vector2(665, 22)
script = ExtResource("11_kassn")
propertycost = 160
rent = 12
colour = 6
type = 1
tilename = "Rey Lane"
buyable = true
metadata/_edit_lock_ = true

[node name="Hove station" type="Marker2D" parent="Board_Tiles"]
position = Vector2(741, 18)
script = ExtResource("11_kassn")
propertycost = 200
rent = 25
colour = 9
type = 1
tilename = "Hove Station"
buyable = true
metadata/_edit_lock_ = true

[node name="Bishop drive" type="Marker2D" parent="Board_Tiles"]
position = Vector2(811, 25)
script = ExtResource("11_kassn")
propertycost = 180
rent = 14
colour = 4
type = 1
tilename = "Bishop Drive"
buyable = true
metadata/_edit_lock_ = true

[node name="Potluck 2" type="Marker2D" parent="Board_Tiles"]
position = Vector2(872, 48)
script = ExtResource("11_iwhwm")
type = 3
tilename = "Potluck"
metadata/_edit_lock_ = true

[node name="Duhnam street" type="Marker2D" parent="Board_Tiles"]
position = Vector2(940, 25)
script = ExtResource("11_kassn")
propertycost = 180
rent = 14
colour = 4
type = 1
tilename = "Dunham Street"
buyable = true
metadata/_edit_lock_ = true

[node name="Broyles lane" type="Marker2D" parent="Board_Tiles"]
position = Vector2(1003, 27)
script = ExtResource("11_kassn")
propertycost = 200
rent = 16
colour = 4
type = 1
tilename = "Broyles Lane"
buyable = true
metadata/_edit_lock_ = true

[node name="Free parking" type="Marker2D" parent="Board_Tiles"]
position = Vector2(1093, 37)
script = ExtResource("15_ljwko")
type = 6
tilename = "Free Parking"
metadata/_edit_lock_ = true

[node name="Yue fei square" type="Marker2D" parent="Board_Tiles"]
position = Vector2(1114, 122)
script = ExtResource("11_kassn")
propertycost = 220
rent = 18
colour = 3
type = 1
tilename = "Yue Fei Square"
buyable = true
metadata/_edit_lock_ = true

[node name="Opportunity knocks2" type="Marker2D" parent="Board_Tiles"]
position = Vector2(1118, 166)
script = ExtResource("13_eictk")
type = 2
tilename = "Opportunity Knocks"
metadata/_edit_lock_ = true

[node name="Mulan rouge" type="Marker2D" parent="Board_Tiles"]
position = Vector2(1127, 225)
script = ExtResource("11_kassn")
propertycost = 220
rent = 18
colour = 3
type = 1
tilename = "Mulan Rouge"
buyable = true
metadata/_edit_lock_ = true

[node name="Han xin garderns" type="Marker2D" parent="Board_Tiles"]
position = Vector2(1121, 279)
script = ExtResource("11_kassn")
propertycost = 240
rent = 20
colour = 3
type = 1
tilename = "Han Xin Garderns"
buyable = true
metadata/_edit_lock_ = true

[node name="Falmer station" type="Marker2D" parent="Board_Tiles"]
position = Vector2(1124, 318)
script = ExtResource("11_kassn")
propertycost = 200
rent = 25
colour = 9
type = 1
tilename = "Falmer Station"
buyable = true
metadata/_edit_lock_ = true

[node name="Shatner close" type="Marker2D" parent="Board_Tiles"]
position = Vector2(1118, 379)
script = ExtResource("11_kassn")
propertycost = 260
rent = 22
colour = 1
type = 1
tilename = "Shatner Close"
buyable = true
metadata/_edit_lock_ = true

[node name="Picard avenue" type="Marker2D" parent="Board_Tiles"]
position = Vector2(1127, 430)
script = ExtResource("11_kassn")
propertycost = 260
rent = 22
colour = 1
type = 1
tilename = "Picard Avenue"
buyable = true
metadata/_edit_lock_ = true

[node name="Edison water" type="Marker2D" parent="Board_Tiles"]
position = Vector2(1122, 483)
script = ExtResource("11_kassn")
propertycost = 150
rent = 4
colour = 5
type = 1
tilename = "Edison Water"
buyable = true
metadata/_edit_lock_ = true

[node name="Crusher creek" type="Marker2D" parent="Board_Tiles"]
position = Vector2(1121, 534)
script = ExtResource("11_kassn")
propertycost = 280
rent = 22
colour = 1
type = 1
tilename = "Crusher Creek"
buyable = true
metadata/_edit_lock_ = true

[node name="Go to jail" type="Marker2D" parent="Board_Tiles"]
position = Vector2(1098, 610)
script = ExtResource("16_857qe")
type = 7
tilename = "Go to Jail"
metadata/_edit_lock_ = true

[node name="Sirat Mews" type="Marker2D" parent="Board_Tiles"]
position = Vector2(996, 621)
script = ExtResource("11_kassn")
propertycost = 300
rent = 26
colour = 7
type = 1
tilename = "Sirat Mews"
buyable = true
metadata/_edit_lock_ = true

[node name="Ghengis Crescent" type="Marker2D" parent="Board_Tiles"]
position = Vector2(943, 615)
script = ExtResource("11_kassn")
propertycost = 300
rent = 26
colour = 7
type = 1
tilename = "Ghengis Crescent"
buyable = true
metadata/_edit_lock_ = true

[node name="Pot luck 3" type="Marker2D" parent="Board_Tiles"]
position = Vector2(875, 622)
script = ExtResource("11_iwhwm")
type = 3
tilename = "Potluck"
metadata/_edit_lock_ = true

[node name="Ibis Close" type="Marker2D" parent="Board_Tiles"]
position = Vector2(809, 624)
script = ExtResource("11_kassn")
propertycost = 320
rent = 28
colour = 7
type = 1
tilename = "Ibis Close "
buyable = true
metadata/_edit_lock_ = true

[node name="Portslade station" type="Marker2D" parent="Board_Tiles"]
position = Vector2(736, 629)
script = ExtResource("11_kassn")
propertycost = 200
rent = 25
colour = 9
type = 1
tilename = "Portslade Station"
buyable = true
metadata/_edit_lock_ = true

[node name="Opportunity knocks3" type="Marker2D" parent="Board_Tiles"]
position = Vector2(673, 634)
script = ExtResource("13_eictk")
type = 2
tilename = "Opportunity Knocks"
metadata/_edit_lock_ = true

[node name="James Webb Way" type="Marker2D" parent="Board_Tiles"]
position = Vector2(611, 631)
script = ExtResource("11_kassn")
propertycost = 350
rent = 35
colour = 10
type = 1
tilename = "James Webb Way"
buyable = true
metadata/_edit_lock_ = true

[node name="Super tax" type="Marker2D" parent="Board_Tiles"]
position = Vector2(549, 621)
script = ExtResource("12_8y2uq")
type = 4
tilename = "Super Tax"
metadata/_edit_lock_ = true

[node name="Turing heights" type="Marker2D" parent="Board_Tiles"]
position = Vector2(484, 633)
script = ExtResource("11_kassn")
propertycost = 400
rent = 50
colour = 10
type = 1
tilename = "Turing Heights"
buyable = true
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.561

[node name="PropertyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 85.0
offset_top = 478.0
offset_right = 232.0
offset_bottom = 534.0
theme = ExtResource("21_jq2sk")
text = "Buy Property
"
metadata/_edit_lock_ = true

[node name="bank_label" type="Label" parent="."]
layout_mode = 0
offset_left = 194.0
offset_top = 52.0
offset_right = 310.0
offset_bottom = 76.0
theme = ExtResource("21_jq2sk")
theme_override_colors/font_color = Color(0.0144607, 0.0990932, 0.245382, 1)
theme_override_font_sizes/font_size = 17
text = "Bank:"

[node name="player_money_lbl" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 93.0
offset_right = 303.0
offset_bottom = 198.0
theme = ExtResource("21_jq2sk")
text = "
"

[node name="player_turn_label" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 8.0
offset_right = 204.0
offset_bottom = 34.0
theme = ExtResource("21_jq2sk")
theme_override_colors/font_color = Color(0.0122679, 0.0960651, 0.21919, 1)
theme_override_font_sizes/font_size = 20
text = "Player *'s Turn
"

[node name="End Turn" type="Button" parent="."]
layout_mode = 0
offset_left = 174.0
offset_top = 574.0
offset_right = 322.0
offset_bottom = 638.0
theme = ExtResource("21_jq2sk")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "END TURN
"

[node name="Turn Action" type="Button" parent="."]
layout_mode = 0
offset_left = 85.0
offset_top = 420.0
offset_right = 229.0
offset_bottom = 461.0
theme = ExtResource("21_jq2sk")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Turn Action
"

[node name="property_lbl" type="Label" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 280.0
offset_right = 209.0
offset_bottom = 329.0
text = "hii
"

[node name="OppoKnocksSprite" type="Sprite2D" parent="."]
position = Vector2(565, 208)
scale = Vector2(0.249091, 0.233933)
texture = ExtResource("19_getpj")

[node name="PotluckSprite" type="Sprite2D" parent="."]
position = Vector2(939, 440)
scale = Vector2(0.313542, 0.333854)
texture = ExtResource("20_ryguw")

[node name="Jail Choice" type="ConfirmationDialog" parent="."]
title = "Stay in jail or pay jail fine?"
position = Vector2i(0, 36)
size = Vector2i(500, 100)
ok_button_text = "Stay in Jail"
cancel_button_text = "Pay Fine"

[node name="House Choice" type="ConfirmationDialog" parent="."]
title = "Would you like to buy a house here?"
position = Vector2i(0, 36)
size = Vector2i(500, 100)
ok_button_text = "Yes"
cancel_button_text = "No"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Labelmessage" type="Label" parent="CanvasLayer2"]
offset_left = 748.0
offset_top = 147.0
offset_right = 946.0
offset_bottom = 191.0

[node name="PropertyHousesButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 582.0
offset_right = 88.0
offset_bottom = 642.0
texture_normal = SubResource("CompressedTexture2D_htxhm")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="DiceStuff/DiceButton" to="." method="_on_dice_button_pressed"]
[connection signal="pressed" from="DiceStuff/RevealDice" to="." method="_on_reveal_dice_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="PropertyButton" to="." method="_on_property_button_pressed"]
[connection signal="pressed" from="End Turn" to="." method="_on_end_turn_pressed"]
[connection signal="pressed" from="Turn Action" to="." method="_on_turn_action_pressed"]
[connection signal="canceled" from="Jail Choice" to="." method="_on_no_pressed"]
[connection signal="confirmed" from="Jail Choice" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="PropertyHousesButton" to="." method="_on_property_houses_button_pressed"]
